[tool.poetry]
name = "million_atom_defects"
version = "0.1.0"
description = "Analysis and plotting code for the article 'Understanding Defects in Amorphous Silicon with Million-Atom Simulations and Machine Learning'"
authors = ["MorrowChem <joemorrow117@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.4"
matplotlib = "^3.6.0"
seaborn = "^0.13.2"
scipy = "^1.10.0"
ase = "^3.22.1"
networkx = "^3.2.1"
ovito = "^3.10.4"
scikit-learn = "^1.4.1"
quippy-ase = ">0.9.0"
ipykernel = ">5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
